Addition to Motivation

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -116,7 +116,11 @@ Using this other system as a ground for our own we build a system that:
 \end{itemize}
 
 \section{Motivation}
-Building upon what is said in the last section we need to find a clear motivation on why this should be done. A few things can be found in the wokring environment of the optician. Determining visual acuity is a very labor- and equipment-intensive process. It is a lot of manual labor with much time wasted when setting up and changing the equipment used. This work-load is also increasing drastically with time. More and more people are experiencing eye problems, at all ages and in amny cultures. \cite{vision_loss} With more people needing to test their visual acuity, faster and more efficient methods needs to be used. Another fact is that physical eye charts are not as accurate as they should be for accurate measurements. They are also big in size and static, static in this context because they are fixed and cannot be changed. Because the handling of printed charts is slow and not as accurate as needed there exists a need for improvement. A digital eye chart has increased functionality, accuracy and efficiency which are all important aspects to aprove upon. A digitalization also gives the user a greater possibility for extending the usage of the system, including adding new charts and optotypes. 
+Building upon what is said in the last section we need to find a clear motivation on why this should be done. A few things can be found in the wokring environment of the optician. Determining visual acuity is a very labor- and equipment-intensive process. It is a lot of manual labor with much time wasted when setting up and changing the equipment used. This work-load is also increasing drastically with time. More and more people are experiencing eye problems, at all ages and in amny cultures. \cite{vision_loss} With more people needing to test their visual acuity, faster and more efficient methods needs to be used. 
+
+Another fact is that physical eye charts are not as accurate as they should be for accurate measurements. They are also big in size and static, static in this context because they are fixed and cannot be changed. Because the handling of printed charts is slow and not as accurate as needed there exists a need for improvement. 
+
+A digital eye chart has increased functionality, accuracy and efficiency which are all important aspects to aprove upon. A digitalization also gives the user a greater possibility for extending the usage of the system, including adding new charts and optotypes. 
 
 \section{Issues}
 There are several technical problems that we need to solve. We need to design a small computer system that will store and present the desired images to the screen. Our current plan is using a Raspberry Pi, since it is a cheap and compact alternative to PCs that is more than powerful enough for our purposes. Though, since the Raspberry Pi in running on a ARM CPU there will be a few compatibility problems that we need to solve. For example is the Java graphics library JavaFX, that is going to replace the older Swing library, not very well supported by Raspberry Pi. Not being able to use the latest features can create problems in the future when some things get deprecated. Though if that happens it is probably not very hard to re-write the GUI to a supported JavaFX version.
