Kommenterade ut Ethical Considerations

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -96,8 +96,8 @@ Designing the Android app for the tablet will also bring technical problems, bot
 
 Finally, we have the issue of networking. A lot can go wrong when trying to control a program over a network and also trying to have the response be fast and accurate. Any problems between the controller and the server will make actions seem slow and unconsistent. It can be even worse when working on a wireless network as in our case. This is an equally important problem as the other ones, but there exists several great technologies helping to prevent these kind of issues that will be a great help to us. 
 
-\section{Ethical considerations}
-Our ethical obligations with this project is providing a functional and stable product. If our system does not perform to specification, a lot of patients could get erroneous measurements during testing, costing a lot of time and money to correct. This is very important to think about since we are dealing with treatment of people. All of this has to be considered even if the final results will not be used clinically.
+%\section{Ethical considerations}
+%Our ethical obligations with this project is providing a functional and stable product. If our system does not perform to specification, a lot of patients could get erroneous measurements during testing, costing a lot of time and money to correct. This is very important to think about since we are dealing with treatment of people. All of this has to be considered even if the final results will not be used clinically.
 
 \chapter{Problem Description}
 \section{Problem}
