--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -8,13 +8,13 @@
 \usepackage{amsmath}
 \usepackage{titlesec}
 \usepackage[nottoc, notlof]{tocbibind}
+\usepackage{pgfplots}
+\usepackage{siunitx}
+\usepackage{multirow}
 % might need later, for diagrams
 %\usepackage{tikz}
 %\usetikzlibrary{arrows,shadows}
 %\usepackage{pgf-umlsd}
-\usepackage{pgfplots}
-\usepackage{siunitx}
-\usepackage{multirow}
 
 \def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
 
@@ -46,25 +46,15 @@ Digitalization of Visual Acuity Testing is a project about digitally displaying 
 \setcounter{page}{1}
 \chapter{Introduction}
 \section{Background}
-%To measure a persons visual acuity today opticians use charts with printed lines of continuously smaller symbols. These so called eye charts can be quite expensive and big. The measurement is made by having the person read symbols on the chart from a set distance. The person reads down the chart until it is no longer possible to make out the characters. Based on the size of the character the patient failed to recognize, a visual acuity can be determined. 
-
 The standard way for an optician to measure a patients visual acuity is to use charts printed with rows of continuously smaller symbols called optotypes~(see~\ref{Optotypes}), most often normal latin letters. The patient reads the symbols on the chart in order until he or she can no longer correctly identify them. Each row on the chart has a pre-calculated number printed beside it, which will help the optician determine which lenses the patient should try next.
 
-%For such charts to function as a basis for these standardized tests of visual acuity the testing environment must be carefully prepared. Among a few things, for the measurement to be optimal the chart must be placed at a set distance from the patient, and the luminosity in the room must be at a specific level. In the event that the room is too small or the lighting insufficient, this can lead to irregularities or faulty measurements in some tests.
-
-These numbers have been calculated from a set of standardized conditions~\cite{Bailey}. For example there must be adequate lighting in the room so the patient can read the letters, but more importantly the charts are meant to be placed a fixed distance from the patient. For most charts, this distance is about six meters. %At that distance, rays of light travelling from the chart to the patient are approximately parallel, 
+These numbers have been calculated from a set of standardized conditions~\cite{Bailey}. For example there must be adequate lighting in the room so the patient can read the letters, but more importantly the charts are meant to be placed a fixed distance from the patient. For most charts, this distance is about six meters. 
 
 These conditions cannot always be met. Examination rooms are not always large enough to take measurements from six meters away for example. In those cases, the reference numbers on the sheet are no longer accurate and the optician has to compensate manually~\cite{PGSoderberg}. If the standardized conditions cannot be met it can lead to irregularities or faulty measurements in some tests.
 
-%These conditions cannot always be met. Sometimes the examination room is not sufficiently large for measurements from six meters. In the event that the room is too small or the lighting insufficient, this can lead to irregularities or faulty measurements in some tests.
-
 There are also several different variations on these eye charts. Different sets of optotypes, ranging from different subsets of latin letters to more abstract symbols, have been developed for different types of patients, such as those who are analphabetic, or for small children. The layout of these charts also have variations, from the classic Snellen chart~(fig.~\ref{fig:snellen_chart}) that was developed in the 19th century, to the more modern ETDRS chart~(fig.~\ref{fig:etdrs_chart}).
 
-%Taking these things in consideration one can see that there are great possibilities for extensions and improvements. It is generally good to try and use as much of the modern technology available. An especially sought after improvement is digitalization. Digitalization means creating an environment using some kind of computer system. 
-
 In a field so dependent on visual aids and equipment, it's easy to see that there are several possibilities for improvement and expansion. Modern technology can be used to improve these tests, and digitalization can simplify the way opticians work with diagrams.
-
-
 
 \section{Purpose}
 Having efficient and accurate systems is important in a medical environment. Especially in a medical environment that handles tests where unaccurate our false results in some cases can cause accidents. Therefore it is important to have a well-built system that mitigates these problems. With the help of Professor Per Söderberg as our expert in the field of ophthalmology we will try to create a system that will act as a prototype for further future work. 
@@ -116,29 +106,6 @@ We will not evaluate a digital screen's effect on the eye compared to a physical
 No security features, such as encrypted network traffic or protection against several users connecting to the same server at the same time, will be implemented. Instead, this is left to the user to make sure that a secure network is used.
 
 No automatic update system will be included, but instead, the user have to manually update both the Android application and the server.
-
-%\subsection{en lista bara för att lista upp avgränsningar (ska bli flytande text)}
-%att göra:
-%\begin{itemize}
-%\item
-%\end{itemize}
-%skriver om:
-%\begin{itemize}
-%\item inte en helt färdig produkt
-%\item inte utveckla sätt att visa SVG
-%\item inte analysera hur ögat påverkas av en display istället för tavla
-%\item inte implementera något om syn, ögat, etc förutom hur tavlorna är gjorda
-%\item inte skapa egna tavlor
-%\item ingen hänsyn till säkerhet (användare får se till att LANet är säkert)
-%\item inga uppdateringar i detta projekt
-%\end{itemize}
-%möjliga saker att göra om tid finns
-%\begin{itemize}
-%\item Att ingen annan kan ansluta till servern som används atm
-%\item Kod till servern
-%\item grating
-%\item det konstiga stjärngrejen i pers grejjer
-%\end{itemize}
 
 \section{Requirements}
 For this project to be considered successful, the system must be able to display the chart chosen by the user. This means that the user have to be able to control which chart type to display on the monitor from an Android device. The types of charts that should be included are the four Axanivis charts, the upper, the lower, the one line and the single optotype chart. The user also has to be able to choose if the current chart should use the Sloan, Tumbling E, HVOT or LEA optotypes.
@@ -408,7 +375,7 @@ we won't be needing a very advanced GUI since the main purpose of the server is 
 
 The rendering of images, specifically SVG vector graphic images, will be handled by an \textit{~Apache} library called \textit{Batik}. It is well supported and extensive library for rendering a multitude of different file formats. The SVG files contain information about the optotypes used on the charts. Using procedural positioning of the SVG images, we can easily create a well structured image to render to the screen.
 
-The server will also handle the networking on its side, connecting to the Android tablet over a TCP connection. This will be done using a third-party library \textit{Kryonet}. \cite{kryonet} Kryonet is a library that wraps Java's own networking functionality and improves upon it. The library's strong-point is the way it implements serialization of Java objects. Using Kryonet we can without a lot of effort serialize objects, send the object over the network and then deserialize is, getting back the original object with all of its internal structure. 
+%The server will also handle the networking on its side, connecting to the Android tablet over a TCP connection. This will be done using a third-party library \textit{Kryonet}. \cite{kryonet} Kryonet is a library that wraps Java's own networking functionality and improves upon it. The library's strong-point is the way it implements serialization of Java objects. Using Kryonet we can without a lot of effort serialize objects, send the object over the network and then deserialize is, getting back the original object with all of its internal structure. 
 
 Network communication will be handled using a submit-poll system. The networking part of the server will recieve information from the network and submit it to a thread-safe queue. While this happends, the GUI polls the information from the queue and handles the information. This methods is neccessary because of how Swing is constructed. Swing runs on a dispatch-thread basis, meaning only the dispatch-thread itself can change things in the GUI. Trying to change things in the GUI from another thread would cause a lot of problems. Now the GUI can try to poll whenever it has time, though try to do this on a period-base.  
 
